--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="assets/img/header.png">
+    <title>Galeria</title>
 </head>
 <body>
     
