--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="tarjeta">
             <img src="assets/img/3.png" class="col-12" alt="">
             <div class="contenido col-12">
-                <h1>Un Cafe</h1>
+                <h1>Un Café</h1>
             </div>
         </div>
         <div class="tarjeta">
